Bug 366217 - konsole crashes upon logging in
Summary: konsole crashes upon logging in
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.04.3
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 366195 368359 383829 388355 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-28 20:05 UTC by Elizabeth Myers
Modified: 2018-01-10 17:04 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Check if session is available (956 bytes, patch)
2016-08-13 16:21 UTC, Martin Sandsmark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elizabeth Myers 2016-07-28 20:05:12 UTC
Konsole crashes mysteriously upon logging back in and starting up

Reproducible: Always

Steps to Reproduce:
1. Log out of KDE
2. Log back in
3. Konsole crashes

Actual Results:  
Konsole crashes.

Expected Results:  
Konsole shouldn't crash.

Using Gentoo Linux.
Comment 1 Elizabeth Myers 2016-07-28 20:06:15 UTC
Backtrace I'm getting:

(gdb) bt
#0  0x000070a666de06ed in nanosleep () at ../sysdeps/unix/syscall-template.S:84
#1  0x000070a666de063a in __sleep (seconds=0, seconds@entry=1) at ../sysdeps/posix/sleep.c:55
#2  0x000070a661a98983 in startProcessInternal (argc=21, argv=<optimized out>, waitAndExit=waitAndExit@entry=true, directly=directly@entry=false)
    at /tmp/portage/kde-frameworks/kcrash-5.24.0/work/kcrash-5.24.0/src/kcrash.cpp:650
#3  0x000070a661a98fe9 in KCrash::startProcess (argc=argc@entry=21, argv=argv@entry=0x7ffe19887fb0, waitAndExit=waitAndExit@entry=true)
    at /tmp/portage/kde-frameworks/kcrash-5.24.0/work/kcrash-5.24.0/src/kcrash.cpp:616
#4  0x000070a661a9944f in KCrash::defaultCrashHandler (sig=<optimized out>) at /tmp/portage/kde-frameworks/kcrash-5.24.0/work/kcrash-5.24.0/src/kcrash.cpp:527
#5  <signal handler called>
#6  Konsole::Session::sessionId (this=this@entry=0x0) at /tmp/portage/kde-apps/konsole-16.04.3/work/konsole-16.04.3/src/Session.cpp:897
#7  0x000070a666ac6a48 in Konsole::ViewManager::createTerminalDisplay (this=this@entry=0xa9fde0, session=session@entry=0x0)
    at /tmp/portage/kde-apps/konsole-16.04.3/work/konsole-16.04.3/src/ViewManager.cpp:747
#8  0x000070a666acb939 in Konsole::ViewManager::createView (this=this@entry=0xa9fde0, session=session@entry=0x0, container=0xaf8b70, index=index@entry=-1)
    at /tmp/portage/kde-apps/konsole-16.04.3/work/konsole-16.04.3/src/ViewManager.cpp:523
#9  0x000070a666acd6cd in Konsole::ViewManager::createView (this=this@entry=0xa9fde0, session=session@entry=0x0)
    at /tmp/portage/kde-apps/konsole-16.04.3/work/konsole-16.04.3/src/ViewManager.cpp:583
#10 0x000070a666aceb3d in Konsole::ViewManager::restoreSessions (this=0xa9fde0, group=...) at /tmp/portage/kde-apps/konsole-16.04.3/work/konsole-16.04.3/src/ViewManager.cpp:941
#11 0x000070a6660d8d90 in KMainWindow::readPropertiesInternal (this=this@entry=0xa33f70, config=0xa0cfe0, number=number@entry=1)
    at /tmp/portage/kde-frameworks/kxmlgui-5.24.0/work/kxmlgui-5.24.0/src/kmainwindow.cpp:648
#12 0x000070a6660d8df2 in KMainWindow::restore (this=0xa33f70, number=number@entry=1, show=show@entry=true)
    at /tmp/portage/kde-frameworks/kxmlgui-5.24.0/work/kxmlgui-5.24.0/src/kmainwindow.cpp:473
#13 0x000070a6670e80fc in restoreSession (app=...) at /tmp/portage/kde-apps/konsole-16.04.3/work/konsole-16.04.3/src/main.cpp:329
#14 0x000070a6670e913d in kdemain (argc=3, argv=0x7ffe19888b88) at /tmp/portage/kde-apps/konsole-16.04.3/work/konsole-16.04.3/src/main.cpp:124
#15 0x000070a666d49790 in __libc_start_main (main=0x400730 <main(int, char**)>, argc=3, argv=0x7ffe19888b88, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>,
    stack_end=0x7ffe19888b78) at ../csu/libc-start.c:289
#16 0x0000000000400769 in _start ()
Comment 2 Martin Sandsmark 2016-08-13 16:14:00 UTC
*** Bug 366195 has been marked as a duplicate of this bug. ***
Comment 3 Martin Sandsmark 2016-08-13 16:21:49 UTC
Created attachment 100588 [details]
Check if session is available
Comment 4 Martin Sandsmark 2016-08-13 18:30:29 UTC
Git commit 13684bebe2a421157032bc3cfaf28e468d0c1eef by Martin T. H. Sandsmark.
Committed on 13/08/2016 at 18:30.
Pushed by sandsmark into branch 'master'.

Fix crash when failing to restore session

REVIEW: 128670

M  +8    -0    src/ViewManager.cpp

http://commits.kde.org/konsole/13684bebe2a421157032bc3cfaf28e468d0c1eef
Comment 5 Kurt Hindenburg 2016-08-13 19:46:44 UTC
Git commit f028f17bee9694954ea78ba03589ba7bdbc9aa39 by Kurt Hindenburg, on behalf of Martin T. H. Sandsmark.
Committed on 13/08/2016 at 19:44.
Pushed by hindenburg into branch 'Applications/16.08'.

Fix crash when failing to restore session

REVIEW: 128670
(cherry picked from commit 13684bebe2a421157032bc3cfaf28e468d0c1eef)

M  +8    -0    src/ViewManager.cpp

http://commits.kde.org/konsole/f028f17bee9694954ea78ba03589ba7bdbc9aa39
Comment 6 Christoph Feck 2017-09-17 21:22:40 UTC
*** Bug 368359 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2017-09-17 21:22:53 UTC
*** Bug 383829 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2018-01-10 17:04:06 UTC
*** Bug 388355 has been marked as a duplicate of this bug. ***