Fix crash when failing to restore session

REVIEW: 128670
BUG: 366217
(cherry picked from commit 13684bebe2a421157032bc3cfaf28e468d0c1eef)